--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -87,6 +87,10 @@
   <ItemGroup>
     <ResourceCompile Include="Arkanoid.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona.png" />
+    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona2.ico" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{3342A3BD-02BF-45AF-88F3-696AD644025C}</ProjectGuid>
