--- a/Arkanoid/Arkanoid.vcxproj
+++ b/Arkanoid/Arkanoid.vcxproj
@@ -88,8 +88,7 @@
     <ResourceCompile Include="Arkanoid.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona.png" />
-    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona2.ico" />
+    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona.ico" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
