--- a/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Arkanoid/Arkanoid.vcxproj.filters
@@ -243,10 +243,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona2.ico">
+    <Image Include="..\..\..\Users\dawid\Desktop\arkanoid_ikona.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
